apps/gitea/postgres.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitea-postgres
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
      component: postgres
  template:
    metadata:
      labels:
        app: gitea
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          command:
            - sleep infinity
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              memory: 150Mi
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: wal
              mountPath: /var/lib/postgresql/wal
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-postgres-data
        - name: wal
          persistentVolumeClaim:
            claimName: gitea-postgres-wal
