apps/gitea/gitea-service-ssh.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: apps
  annotations:
    metallb.io/loadBalancerIPs: 10.1.16.7
spec:
  selector:
    app: gitea
    component: server
  type: LoadBalancer
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
