apps/gitea/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-web
  namespace: apps
spec:
  selector:
    app: gitea
    component: server
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
